--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,12 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
+      <h2>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
-      </h1>
-      <p class="lead">{{ site.description }}</p>
+      </h2>
+      <p>{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
@@ -25,12 +25,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
-
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p><a class="sidebar-nav-item" href="{{ site.github.repo }}">Built with Hyde v{{ site.version }}</a>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
