updated sidebar and home screen layout

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,8 +26,8 @@
         {% endif %}
       {% endfor %}
     </nav>
-    <div class="container sidebar-sticky">
-      <p><a class="sidebar-nav-item" href="{{ site.github.repo }}">Built with Hyde v{{ site.version }}</a>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
-    </div>
+  </div>
+  <div class="container sidebar-sticky">
+    <p><a class="sidebar-nav-item" href="{{ site.github.repo }}">Built with Hyde</a>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
