--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,12 @@
     {% endif %}
   </title>
 
+  {% if page.title == "Home" %}
+    <meta name="description" content="{{ site.description }}">
+  {% else if page.id %}
+    <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 150 }}">
+  {% endif %}
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
