--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,8 @@
     </nav>
   </div>
   <div class="container sidebar-sticky">
-    <p><a class="sidebar-nav-item" href="{{ site.github.repo }}">Built with Hyde</a>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>Built with <a href="http://jekyllrb.com/">Jekyll</a> and <a href="https://github.com/poole/hyde">Hyde</a><br>
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+    </p>
   </div>
 </div>
