--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,4 +12,6 @@
     </div>
 
   </body>
+  <script charset="utf-8" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script charset="utf-8" src="{{ site.baseurl }}public/js/custom.js"></script>
 </html>
