update urls and add profile image

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container">
     <div class="sidebar-about">
+      <img src="http://www.gravatar.com/avatar/b1f037f0d1e6195a59865d24cb7ee875.jpg?s=100" alt="lance batson gravatar"/>
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
