--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,16 +1,16 @@
 <div class="sidebar">
   <div class="container">
     <div class="sidebar-about">
-      <img src="http://www.gravatar.com/avatar/b1f037f0d1e6195a59865d24cb7ee875.jpg?s=100" alt="lance batson gravatar"/>
+      <img src="https://www.gravatar.com/avatar/b1f037f0d1e6195a59865d24cb7ee875.jpg?s=100" alt="lance batson gravatar"/>
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.url }}">
           {{ site.title }}
         </a>
       </h1>
       <p>{{ site.description }}</p>
     </div>
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}" href="{{ site.url }}">Home</a>
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
