--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,5 @@
 
   </body>
   <script charset="utf-8" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script charset="utf-8" src="{{ site.baseurl }}public/js/custom.js"></script>
+  <script charset="utf-8" src="{{ site.baseurl }}/assets/js/custom.js"></script>
 </html>
